--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   "author": "warunsharma.95@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.12.11",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0"
